--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,11 +12,11 @@
 <div class="control-panel">
   <div class="form-group">
     <label>Price:</label>
-    <input type="number" id="text-price" placeholder="price">
+    <input type="number" id="text-price" placeholder="price" min="0" [value]="price">
   </div>
   <div class="form-group">
     <label>Discount</label>
-    <input type="number" id="txt-discount" placeholder="Discount">
+    <input type="number" id="txt-discount" min="0" placeholder="Discount" [value]="discount">
   </div>
 
 </div>
