--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,20 +4,20 @@
   <div class="cart-item_title">Quick Charge 3.0 USB Car Charger Socket 12V/24V 36W Dual QC3.0 USB Fast Charger
     Socket Power Outlet with Touch Switch for Marine, Boat, Motorcycle, Truck, Golf Cart (White)
   </div>
-  <div class="cart-item_price">${{price}}</div>
-  <div class="cart-item_discount">Discount <span>{{discount}}%</span></div>
-  <div class="cart-item_finalPrice">${{price - (price * discount / 100)}}</div>
+  <div class="cart-item_price">{{price | currency : 'USD' }}</div>
+  <div class="cart-item_discount">{{'discount' | uppercase }} <span>{{discount / 100 | percent }}</span></div>
+  <div class="cart-item_finalPrice">{{price - (price * discount / 100) | currency : 'USD'}}</div>
 </div>
 
 <div class="control-panel">
   <div class="form-group">
     <label>Price:</label>
     <!--<input #txtPrice type="number" id="text-price" placeholder="price" min="0" [value]="price" (input)="updatePrice(txtPrice.value)">-->
-    <input #txtPrice type="number" id="text-price" placeholder="price" min="0" [(ngModel)]="price" >
+    <input type="number" id="text-price" placeholder="price" min="0" [(ngModel)]="price">
   </div>
   <div class="form-group">
     <label>Discount</label>
-    <input #txtDiscount type="number" id="txt-discount" min="0" placeholder="Discount" [(ngModel)]="discount" >
+    <input type="number" id="txt-discount" min="0" placeholder="Discount" [(ngModel)]="discount">
   </div>
 
 </div>
