--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,8 @@
   </div>
   <div class="cart-item_price">{{price | currency : 'USD' }}</div>
   <div class="cart-item_discount">{{'discount' | uppercase }} <span [class.highlight]="checkDiscount()">{{discount | number:'2.2-2' | percentage}}</span></div>
-  <div class="cart-item_finalPrice">{{price - (price * discount / 100) | currency : 'USD'}}</div>
+  <!--<div class="cart-item_finalPrice" [style.backgroundColor]="(price - (price * discount / 100))> 200? 'red' : 'white'" >{{price - (price * discount / 100) | currency : 'USD'}}</div>-->
+  <div class="cart-item_finalPrice" [style.backgroundColor]="colorChanging()" >{{price - (price * discount / 100) | currency : 'USD'}}</div>
 </div>
 
 <div class="control-panel">
