set small statement for check *ngIf

--- a/src/app/structural/structural.component.html
+++ b/src/app/structural/structural.component.html
@@ -1,1 +1,4 @@
 <p>structural works!</p>
+<p *ngIf= 'showPara'>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci at, atque consectetur dolorum ea, esse eum
+  exercitationem molestias, nemo odit optio qui quisquam reprehenderit sint ullam? Dolorum fugit nam perspiciatis!</p>
+<button (click)="enablePara()">Show /Hide para</button>
